Massive improvements to how the debugger communicates with the target vm